<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/my_label_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello_world"
        android:textSize="50sp" />

    <LinearLayout
        android:id="@+id/my_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <!--
             set weigth to 1 for make the input box fill in the screen width
        	 set the width to 0dp to  improves layout performance because using 
        	 "wrap_content" as the width requires the system to calculate a width 
        	 that is ultimately irrelevant because the weight value requires another 
        	 width calculation to fill the remaining space.
        -->

        <EditText
            android:id="@+id/my_editText_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/my_editText_hint" />

        <Button
            android:id="@+id/my_button_open_contacts_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/my_button_open_contacts" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/my_dummy_activity_description"
        android:textSize="18sp" />
    
    <Button
        android:id="@+id/my_button_open_dummy_activity_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/my_button_open_dummy_activity" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/my_alarm_manager_description"
        android:textSize="18sp" />
    
    <Button
        android:id="@+id/my_button_alarm_manager_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/my_button_alarm_manager" />
    
    <Button
        android:id="@+id/my_button_alarm_manager_stop_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/my_button_alarm_stop_manager" />

</LinearLayout>